<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pau.putrautama.footballschedule.view.detail.detailMatch.DetailMatchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_detail"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/match_date_detail"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:maxHeight="115dp"
                    android:maxWidth="115dp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/vs"/>

                <ImageView
                    android:id="@+id/iv_away"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_weight="3"
                    android:maxHeight="115dp"
                    android:maxWidth="115dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tv_home_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_away_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/tv_home_score_match"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_away_score_match"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tv_home_shots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="3"
                    android:gravity="start" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/shots"/>

                <TextView
                    android:id="@+id/tv_away_shot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="3"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tv_home_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/goals"/>

                <TextView
                    android:id="@+id/tv_away_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tv_home_goalkeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/goal_keeper"/>

                <TextView
                    android:id="@+id/tv_away_goalkeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tv_home_defense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/defense"/>

                <TextView
                    android:id="@+id/tv_away_defense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tv_home_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/midfield"/>

                <TextView
                    android:id="@+id/tv_away_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tv_home_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/forward"/>

                <TextView
                    android:id="@+id/tv_away_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tv_home_substitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/substituties"/>

                <TextView
                    android:id="@+id/tv_away_substitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>